[package]
name = "cm-oxide"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "env"] }
tokio = { version = "1.36.0", features = ["full"] }
